@@ -61,8 +61,8 @@ public class QuadTreeSampleAdd extends QuadTreeSample
 		double [] bbmax = { 1.0, 1.0 };
 		final Mesh2D m = new Mesh2D();
 		m.pushCompGeom(2);
-		m.resetQuadTree(bbmin, bbmax);
-		final QuadTreeSampleAdd r = new QuadTreeSampleAdd(m.getQuadTree());
+		m.resetKdTree(bbmin, bbmax);
+		final QuadTreeSampleAdd r = new QuadTreeSampleAdd(m.getKdTree());
 		logger.debug("Start insertion");
 		for (int i = 0; i < 500; i++)
 		{
