@@ -67,8 +67,8 @@ public class QuadTreeSampleNearest extends QuadTreeSample
 		double [] bbmax = { 1.0, 1.0 };
 		final Mesh2D m = new Mesh2D();
 		m.pushCompGeom(2);
-		m.resetQuadTree(bbmin, bbmax);
-		final QuadTreeSampleNearest r = new QuadTreeSampleNearest(m.getQuadTree());
+		m.resetKdTree(bbmin, bbmax);
+		final QuadTreeSampleNearest r = new QuadTreeSampleNearest(m.getKdTree());
 		logger.debug("Start insertion");
 		for (int i = 0; i < 500; i++)
 		{
