@@ -2,6 +2,10 @@ Thu Nov 22 12:37:13 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
 	* src/org/jcae/mesh/amibe/patch/Calculus.java (distance2): Modify
 	signature, this may be needed to improve SmoothNodes2D.
+	* src/org/jcae/mesh/amibe/patch/Mesh2D.java: Rename getQuadTree()...
+	* src/org/jcae/mesh/amibe/ds/Mesh.java: into getKdTree()...
+	* src/org/jcae/mesh/amibe/patch/Mesh2D.java: Rename resetQuadTree()...
+	* src/org/jcae/mesh/amibe/ds/Mesh.java: into resetKdTree()...
 
 Thu Nov 22 10:53:13 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
